--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,15 +1,18 @@
 $primary: #1E2A78;          // Azul profundo elegante (color base principal)
+$black: #000000;
 $secondary: #FFB703;        // Amarillo brillante, energético y comercial
 $tertiary: #333333;         // Gris oscuro para texto
 $grey: #F7F9FC;             // Gris azulado claro para fondos suaves
 $dark-grey: #9BA4B5;        // Gris medio elegante
 $accent: #FF6F61;           // Coral moderno para botones o detalles
+$dark-green: #1d5536;            // Verde menta neón para acentos ligeros
 $green: #3DDC84;            // Verde menta neón para acentos ligeros
 $white: #FFFFFF;            // Blanco puro
 $red: #FF3B30;              // Rojo notificación (para badge)
 $light-red: #FF6B6B;        // Rojo claro para hover o alertas suaves
 $ligth-green: #3ddc8560;
 $yellow: #FFB703;           // Amarillo comercial
+$yellow-button: #bd8905;           // Amarillo comercial
 $blue: #00B4D8;             // Azul turquesa moderno
 $bg: linear-gradient(90deg, #064E3B 0%, #10B981 100%); 
 
