fix some issues

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,8 @@
 @use './pages/admin/sidebar'; 
 @use './pages/admin/login'; 
 
+//Estilos de reviews
+ @use './pages/review/reviewPage'; 
 
 
 //Estilos de receetas
