--- a/src/styles/pages/review/_reviewPage.scss
+++ b/src/styles/pages/review/_reviewPage.scss
@@ -47,8 +47,9 @@
         box-shadow: none !important;
 
         position: relative;
+        display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        gap: 8px;
 
         input[type="file"] {
           display: none;
@@ -88,12 +89,24 @@
           justify-content: center;
 
           img {
+            margin-top: 10px;
             width: 100%;
-            max-width: 200px;
-            border-radius: 8px;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            max-width: 250px;
+            border-radius: 10px;
             object-fit: cover;
-            transition: transform 0.3s ease;
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+
+            @keyframes fadeIn {
+              from {
+                opacity: 0;
+                transform: translateY(-5px);
+              }
+
+              to {
+                opacity: 1;
+                transform: translateY(0);
+              }
+            }
 
             &:hover {
               transform: scale(1.03);
@@ -203,4 +216,19 @@
 .review-pendiente {
   color: #ef4444; // rojo error
   font-size: 1.2rem;
+}
+
+.upload-menu button {
+  display: block;
+  background: none;
+  border: none;
+  padding: 10px 16px;
+  width: 100%;
+  text-align: left;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.upload-menu button:hover {
+  background-color: #f5f5f5;
 }
