--- a/src/styles/pages/review/_reviewPage.scss
+++ b/src/styles/pages/review/_reviewPage.scss
@@ -3,10 +3,10 @@
 .review-container {
   height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: start;
-  padding: 1rem; // margen lateral en mobile
-  margin-top: 20vh;
+  justify-content: start;
+  align-items: center;
+  padding: 1rem;
+  padding-top: 5vh;
 
   .review-page {
     max-width: 480px;
@@ -58,7 +58,7 @@
 
           .photo-btn {
             flex: 1;
-            background-color: #f5b800;
+            background-color: #bd8905;
             color: #fff;
             border: none;
             padding: 12px 0;
@@ -137,18 +137,17 @@
         border: none;
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
+        text-align: center;
+        gap: 0.75rem;
 
-        @media (max-width: 480px) {
-          align-items: center;
-          gap: 0.75rem;
-
-          .stars {
-            display: flex;
-            justify-content: center;
-            gap: 0.6rem;
-          }
+        .stars {
+          display: flex;
+          justify-content: center;
+          gap: 0.6rem;
         }
+
+
       }
 
       .btn-submit {
@@ -222,4 +221,10 @@
       padding: 10px 0;
     }
   }
+}
+
+.photo-label, .stars-label {
+  text-align: left;
+  font-weight: 600;
+  margin-bottom: 5px;
 }
