--- a/src/styles.css
+++ b/src/styles.css
@@ -218,43 +218,61 @@
   }
 }
 
-.review-container {
+.review-home-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1.25rem;
   margin-block: 2rem;
 }
-.review-container h2 {
+.review-home-container h2 {
   font-size: 1.75rem;
 }
 @media (max-width: 768px) {
-  .review-container h2 {
+  .review-home-container h2 {
     font-size: 1.25rem;
   }
 }
 @media (max-width: 768px) {
-  .review-container {
+  .review-home-container {
     margin-block: 1.25rem;
     gap: 1rem;
   }
 }
 
-.review-list {
+.review-home-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 1.5rem;
   padding: 2rem;
+  max-height: 400px;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
+.review-home-list .review-home-list::-webkit-scrollbar {
+  width: 8px;
+}
+.review-home-list .review-home-list::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+.review-home-list .review-home-list::-webkit-scrollbar-thumb {
+  background: #888; /* Color del "pulgar" (el que mueves) */
+  border-radius: 10px; /* Esquinas redondeadas */
+}
+.review-home-list .review-home-list::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 @media (max-width: 768px) {
-  .review-list {
+  .review-home-list {
     padding: 1rem;
     gap: 1rem;
   }
 }
 @media (max-width: 420px) {
-  .review-list {
+  .review-home-list {
     gap: 0.5rem;
     padding: 0.75rem;
   }
