--- a/src/styles/pages/home/_reviews.scss
+++ b/src/styles/pages/home/_reviews.scss
@@ -1,4 +1,4 @@
-.review-container {
+.review-home-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,14 +20,33 @@
   }
 }
 
-.review-list {
+.review-home-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 1.5rem;
   padding: 2rem;
+  max-height: 400px;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1; 
 
+  .review-home-list::-webkit-scrollbar {
+  width: 8px; 
+  }
+  .review-home-list::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 10px;
+}
+.review-home-list::-webkit-scrollbar-thumb {
+  background: #888; /* Color del "pulgar" (el que mueves) */
+  border-radius: 10px; /* Esquinas redondeadas */
+}
 
+.review-home-list::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+  
   @media (max-width: 768px) {
     padding: 1rem;
     gap: 1rem;
