--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,8 @@
 @use './pages/home/reviews'; 
 @use './pages/home/featured'; 
 
+// Estilos de landing page
+@use './pages/landing/landing';
 
 //Estilos del campo
 @use './pages/farm/campo'; 
